workspace-sf/force-app/main/default/objects/FavorecidoRemuneracaoProposta__c/FavorecidoRemuneracaoProposta__c.object-meta.xml
<CustomObject>
    <label>Favorecido da Remuneração da Proposta</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Favorecido da Proposta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Favorecidos da Remuneração da Proposta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>