workspace-sf/force-app/main/default/objects/FavorecidoRemuneracaoProposta__c/fields/CelularCorretor__c.field-meta.xml
<CustomField>
    <fullName>CelularCorretor__c</fullName>
    <description>Campo usado para salvar o número de celular usado para receber o SMS da samplemed.</description>
    <label>Celular do corretor</label>
    <type>Phone</type>
</CustomField>