workspace-sf/force-app/main/default/objects/FavorecidoRemuneracaoProposta__c/fields/CorretorResponde__c.field-meta.xml
<CustomField>
    <fullName>CorretorResponde__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo utilizado para verificar se o preenchimento do formulário dps será feito pelo corretor.</description>
    <label>Corretor responde?</label>
    <type>Checkbox</type>
</CustomField>