workspace-sf/force-app/main/default/objects/FavorecidoRemuneracaoProposta__c/fields/DadosCorretor__c.field-meta.xml
<CustomField>
    <fullName>DadosCorretor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dados do corretor</label>
    <referenceTo>DadosCorretor__c</referenceTo>
    <relationshipLabel>Favorecidos da Remuneração da Proposta</relationshipLabel>
    <relationshipName>FavorecidosRemuneracaoProposta</relationshipName>
    <type>Lookup</type>
</CustomField>