workspace-sf/force-app/main/default/objects/FavorecidoRemuneracaoProposta__c/fields/RemuneracaoProposta__c.field-meta.xml
<CustomField>
    <fullName>RemuneracaoProposta__c</fullName>
    <label>Remuneração da proposta</label>
    <referenceTo>RemuneracaoProposta__c</referenceTo>
    <relationshipLabel>Favorecidos da Remuneração da Proposta</relationshipLabel>
    <relationshipName>FavorecidosRemuneracaodaProposta</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>