workspace-sf/force-app/main/default/objects/FavorecidoRemuneracaoProposta__c/fields/Susep__c.field-meta.xml
<CustomField>
    <fullName>Susep__c</fullName>
    <label>Susep</label>
    <length>50</length>
    <type>Text</type>
</CustomField>