workspace-sf/force-app/main/default/objects/FavorecidoRemuneracaoProposta__c/fields/SusepEmissao__c.field-meta.xml
<CustomField>
    <fullName>SusepEmissao__c</fullName>
    <label>Susep Emissão</label>
    <length>50</length>
    <type>Text</type>
</CustomField>