workspace-sf/force-app/main/default/objects/FavorecidoRemuneracaoProposta__c/fields/SusepOficialCorretor__c.field-meta.xml
<CustomField>
    <fullName>SusepOficialCorretor__c</fullName>
    <label>Susep Oficial Corretor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>